@@ -79,9 +79,12 @@ public:
 	const Texture *GetTexture3() const { return tex3; }
 	MasonryBond GetBond() const { return bond; }
 	const luxrays::Point &GetOffset() const { return offset; }
-	float GetBrickWidth() const { return initialbrickwidth; }
-	float GetBrickHeight() const { return initialbrickheight; }
-	float GetBrickDepth() const { return initialbrickdepth; }
+	float GetInitialBrickWidth() const { return initialbrickwidth; }
+	float GetInitialBrickHeight() const { return initialbrickheight; }
+	float GetInitialBrickDepth() const { return initialbrickdepth; }
+	float GetBrickWidth() const { return brickwidth; }
+	float GetBrickHeight() const { return brickheight; }
+	float GetBrickDepth() const { return brickdepth; }
 	float GetMortarSize() const { return mortarsize; }
 	float GetProportion() const { return proportion; }
 	float GetInvProportion() const { return invproportion; }
